<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    tools:context=".RelativeLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/red"
        android:text="@string/relative_layout"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/img"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="350dp"
        android:background="@color/wine"
        android:hint="@string/input1"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="420dp"
        android:background="@color/wine"
        android:text="@string/input2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/violet"
        android:text="@string/button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>