<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/red"
        android:text="@string/linear_ver_layout"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="150dp"
        android:src="@drawable/img"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:background="@color/wine"
        android:hint="@string/input1"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:background="@color/wine"
        android:text="@string/input2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/violet"
        android:text="@string/button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/yellow"
            android:text="@string/linear_hor_layout"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img"/>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>